# DataEngineering

./: README.md  to run on cpu-node2 (192.168.1.187):" | cat
architecture/: feast_feature_store_architecture_guide.md  flink_architecture_guide.md  kafka_architecture_guide.md  lakehouse_architecture_guide.md  spark_architecture_guide.md  trino_architecture_guide.md
building_block_apps/: BUILD.bazel  README.md  WORKSPACE
building_block_apps/cassandra/: BUILD.bazel
building_block_apps/cassandra/cpp/: BUILD.bazel
building_block_apps/cassandra/java/: BUILD.bazel
building_block_apps/cassandra/python/: BUILD.bazel  cassandra_common.py
building_block_apps/flink/: BUILD.bazel  README.md
building_block_apps/flink/java/: BUILD.bazel  StreamingAnalytics.java
building_block_apps/flink/python/: BUILD.bazel  cdc_processing.py  flink_common.py  sql_streaming.py  state_management.py  streaming_analytics.py  windowing_aggregations.py
building_block_apps/kafka/: BUILD.bazel
building_block_apps/kafka/cpp/: BUILD.bazel  consumer.cpp  kafka_common.cpp  kafka_common.h  producer.cpp
building_block_apps/kafka/java/: BUILD.bazel  Consumer.java  KafkaCommon.java  Producer.java
building_block_apps/kafka/python/: BUILD.bazel  consumer.py  kafka_common.py  producer.py
building_block_apps/postgresql/: BUILD.bazel
building_block_apps/postgresql/python/: BUILD.bazel  basic_operations.py  postgresql_common.py
building_block_apps/redis/: BUILD.bazel
building_block_apps/redis/python/: BUILD.bazel  redis_common.py
building_block_apps/spark/: BUILD.bazel
building_block_apps/spark/cpp/: BUILD.bazel  batch_processing.cpp  etl_pipeline.cpp  spark_common.cpp  spark_common.h  sql_queries.cpp  streaming.cpp
building_block_apps/spark/java/: BUILD.bazel  BatchProcessing.java  EtlPipeline.java  SparkCommon.java  SqlQueries.java  Streaming.java
building_block_apps/spark/python/: BUILD.bazel  batch_processing.py  etl_pipeline.py  spark_common.py  sql_queries.py  streaming.py
building_block_apps/trino/: BUILD.bazel
building_block_apps/trino/python/: BUILD.bazel  basic_queries.py  federated_queries.py  performance_analysis.py  trino_common.py
interaction_building_blocks/: BUILD.bazel  README.md  WORKSPACE
interaction_building_blocks/flink-iceberg/: BUILD.bazel
interaction_building_blocks/flink-iceberg/python/: BUILD.bazel  EXECUTION_GUIDE.md  flink_iceberg_common.py  iceberg_streaming_analytics.py  kafka_to_iceberg_streaming.py
interaction_building_blocks/flink-postgresql/: BUILD.bazel
interaction_building_blocks/flink-postgresql/python/: BUILD.bazel
interaction_building_blocks/flink-redis/: BUILD.bazel
interaction_building_blocks/flink-redis/python/: BUILD.bazel
interaction_building_blocks/kafka-cassandra/: BUILD.bazel
interaction_building_blocks/kafka-cassandra/python/: BUILD.bazel  kafka_cassandra_common.py
interaction_building_blocks/kafka-flink/: BUILD.bazel
interaction_building_blocks/kafka-flink/python/: BUILD.bazel  kafka_flink_common.py  stream_processor.py
interaction_building_blocks/kafka-redis/: BUILD.bazel
interaction_building_blocks/kafka-redis/python/: BUILD.bazel
interaction_building_blocks/kafka-spark/: BUILD.bazel
interaction_building_blocks/kafka-spark/python/: BUILD.bazel
interaction_building_blocks/kafka-trino/: BUILD.bazel
interaction_building_blocks/kafka-trino/python/: BUILD.bazel
interaction_building_blocks/redis-postgresql/: BUILD.bazel
interaction_building_blocks/redis-postgresql/python/: cached_queries.py  redis_postgresql_common.py
interaction_building_blocks/spark-postgresql/: BUILD.bazel
interaction_building_blocks/spark-postgresql/python/: spark_postgresql_common.py
interaction_building_blocks/spark-redis/: BUILD.bazel
interaction_building_blocks/spark-redis/python/: BUILD.bazel
interaction_building_blocks/trino-postgresql/: BUILD.bazel
interaction_building_blocks/trino-postgresql/python/: BUILD.bazel
setup_guide/: 01_postgresql_setup.md  02_kafka_distributed_setup.md  03_spark_cluster_setup.md  04_flink_cluster_setup.md  05_trino_cluster_setup.md  06_hdfs_distributed_setup.md  06_iceberg_local_setup.md  07_deltalake_local_setup.md  07_hive_metastore_setup.md  07_iceberg_distributed_comprehensive.md  08_deltalake_distributed_comprehensive.md  08_iceberg_distributed_comprehensive.md  09_deltalake_distributed_comprehensive.md  10_neo4j_graph_database_setup.md  11_feast_feature_store_setup.md  11_gpu_ml_setup.md  11_redis_setup.md  12_application_ideas_medium_to_advanced.md  12_feast_feature_store_setup.md  12_gpu_ml_setup.md  13_gpu_ml_setup.md  14_application_ideas_medium_to_advanced.md  14_elasticsearch_setup.md  15_dbeaver_universal_client_setup.md  16_application_ideas_medium_to_advanced.md  16_cassandra_cluster_setup.md
